# balance-analyzer

./: .gitignore  README.md
balance-analyzer/: .gitignore  CMakeLists.txt  README.md  main.cpp
demo-dir/: Makefile
distiller/: CMakeLists.txt
distiller/src/: main.cpp
full-analyzer/: analyzer.py  balance-analyzer  model.py
simple-analyzer/include/: dfa.h
simple-analyzer/src/: main.cpp
test-programs/full/: complex.c  full1.c  full2.c
test-programs/include/: softbrain.h
test-programs/simple/: test1.c
